syntax = "proto3";

package org.openkilda.server42.stats.messaging.flowrtt;


message FlowLatencyPacket {
    string flow_id = 1;
    bool direction = 2;
    int64 t0 = 3;
    int64 t1 = 4;
    uint64 packet_id = 5;
}

message FlowLatencyPacketBucket {
    repeated FlowLatencyPacket packet = 1;
}
